sidebar recent prompt mapped

--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -1,5 +1,6 @@
 .sidebar{
     min-height: 100vh;
+    max-width: 20%;
     display: inline-flex;
     flex-direction: column;
     justify-content: space-between;
